--- a/src/components/all-products/AllProducts.css
+++ b/src/components/all-products/AllProducts.css
@@ -1,3 +1,28 @@
+.all_products_wrap{
+    flex: 1;
+    height: 800px;
+    margin: 30px 0px;
+    margin-left: -15px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+
+.all_product_conatainer{
+    width: 81%;
+    height: 800px;
+    display: flex;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+}
+
+.excelent_product{
+    margin: 0px 20px;
+}
+
 .u_p_wrap{
     width: 100%;
     height: 50px;
